Fixed clipping on header and sizing for sections.

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -3,15 +3,22 @@
 .title-bar {
   display: flex;
   justify-content: center;
-
-  h1 {
-    flex-grow: 1;
+  text-align: center;
+  flex-direction: column;
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    h1 {
+      flex-grow: 1;
+    }
   }
 
   ul {
     list-style: none;
     display: inline-flex;
-    margin-top: 25px;
+    justify-content: center;
+    @media screen and (min-width: 768px) {
+      margin-top: 25px;
+    }
     a {
       margin-right: 15px;
     }
@@ -20,6 +27,27 @@
 
 main {
   margin-top: 70px; //Navbar overlaps, a margin is needed
+  span {
+    @include make-xs-column(10);
+    @include make-xs-column-offset(1);
+    @include make-sm-column(5);
+  }
+  .row {
+    p {
+      font-size: 16px;
+      @media screen and (min-width: 768px) {
+        font-size: 22px;
+      }
+    }
+
+    img.center-block {
+      width: 75%;
+      height: auto;
+    }
+
+  }
+
+
 }
 
 .jumbotron {
